# AoC2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Common.h  main.c
src/days/d01/: day1.c
src/days/d02/: day2.c
src/days/d03/: day3.c
src/days/d04/: day4.c
src/days/d05/: day5.c
src/days/d06/: day6.c
src/days/d07/: day7.c
src/days/d08/: day8.c
src/days/d09/: day9.c
src/days/d1/: day1.c
src/days/d10/: day10.c
src/days/d11/: day11.c
src/days/d12/: day12.c
src/days/d13/: day13.c
src/days/d14/: day14.c
src/days/d15/: day15.c
src/days/d2/: day2.c
src/days/d3/: day3.c
src/days/d4/: day4.c
src/days/d5/: day5.c
src/days/d6/: day6.c
src/days/d7/: day7.c
src/days/d8/: day8.c
src/days/d9/: day9.c
